# VLM-Windows-Demo

./: README.md  README_jp.md
C++/: CMakeLists.txt  backend.cpp  backend.h  main.cpp
Prompts/: prompt_hat.json  prompt_person.json  prompt_phone.json  prompt_retail_behavior.json  prompt_retail_stock.json
Python/: README.md  app.py  backend.py  requirements.txt
hef/: Download-Hef.ps1
